--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,14 @@
   color: #888;
 } */
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+}
+
 .highlighted-text {
   color: #4A90E2;
   font-weight: bold;
